# PocketSmith_Master-Sheet_Google

./: .env.example  .gitignore  BELEGE_KONTROLLE_SPEC.md  CLAUDE.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
scripts/: test_beleg_extract.py
src/pocketsmith_sheet_sync/: aggregator.py  completeness.py  config.py  drive_client.py  formatting.py  http_api.py  main.py  mcp_server.py  paypal_classifier.py  pdf_extractor.py  pdf_sync.py  pdf_tracker.py  pocketsmith.py  sheets.py  sync.py
src/pocketsmith_sheet_sync/pdf/: __init__.py  beleg.py  client.py  kontoauszug.py
