[project]
name = "pocketsmith-sheet-sync"
version = "0.1.0"
description = "Sync PocketSmith account/transaction stats to Google Sheets master tables"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.34.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
]

[project.scripts]
pocketsmith-sync = "pocketsmith_sheet_sync.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pocketsmith_sheet_sync"]
